<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:text="@string/ResetyourPassword"
        android:id="@+id/textView"
        android:textSize="35dp"
        android:textColor="#ff0000"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/EnteryourEmailAddress"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="17dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/forpas"
        android:textColor="#000000"
        android:layout_below="@+id/textView2"
        android:hint="Email"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:inputType="textEmailAddress" />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/Reset"
        android:textColor="#000000"
        android:id="@+id/respass"
        android:layout_below="@+id/forpas"
        android:layout_alignParentLeft="true"
        android:textSize="13dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:id="@+id/alert"
        android:layout_below="@+id/respass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textColor="#000000"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/BacktoLogin"
        android:id="@+id/bktolog"
        android:textColor="#000000"
        android:layout_below="@+id/forpas"
        android:layout_alignParentRight="true"
        android:textSize="13dp"/>
</RelativeLayout>