<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ImportingOCR"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false">

    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/buttonBack"
        android:onClick="Back"
        android:visibility="visible"
        android:layout_alignTop="@+id/buttonContinue"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:id="@+id/buttonContinue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckNumber"
        android:id="@+id/textView4"
        android:textSize="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BankNumber"
        android:id="@+id/textView5"
        android:textSize="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BranchNumber"
        android:id="@+id/textView6"
        android:textSize="20dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AccountNumber"
        android:id="@+id/textView8"
        android:textSize="20dp"
        android:layout_below="@+id/imageView2"
        android:layout_toLeftOf="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/textBankNum"
        android:background="#ffffff"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/textCheckNum"
        android:layout_alignStart="@+id/textCheckNum" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/textBranchNum"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/textBankNum"
        android:layout_alignStart="@+id/textBankNum"
        android:background="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/textAccountNum"
        android:background="#ffffff"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignRight="@+id/buttonContinue"
        android:layout_alignEnd="@+id/buttonContinue"
        android:layout_toRightOf="@+id/buttonBack"
        android:layout_toEndOf="@+id/buttonBack" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/textCheckNum"
        android:background="#ffffff"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textAccountNum"
        android:layout_alignStart="@+id/textAccountNum" />


</RelativeLayout>