<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:weightSum="1">

    <ImageView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/checkmelogo"
        android:background="@android:color/transparent"
        android:id="@+id/imageView3" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="false"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"></GridLayout>
    </ScrollView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textUsername"
        android:hint="@string/EnterUsername"
        android:maxLines="1"
        android:textSize="20dp"
        android:layout_marginTop="120dp"
        android:layout_below="@+id/rlEmail"
        android:layout_alignLeft="@+id/textPassword"
        android:layout_alignStart="@+id/textPassword"
        android:layout_alignRight="@+id/textPassword"
        android:layout_alignEnd="@+id/textPassword" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPassword"
        android:inputType="textPassword"
        android:hint="@string/EnterPassword"

        android:maxLines="1"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/textUsername"
        android:layout_alignLeft="@+id/textConfirm"
        android:layout_alignStart="@+id/textConfirm" />

    <HorizontalScrollView
        android:id="@+id/rlEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"></HorizontalScrollView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textEmail"
        android:hint="@string/EnterEmail"
        android:textSize="20dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_below="@+id/textConfirm"
        android:layout_alignRight="@+id/textConfirm"
        android:layout_alignEnd="@+id/textConfirm"
        android:layout_toRightOf="@+id/rlEmail"
        android:layout_toEndOf="@+id/rlEmail" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textConfirm"
        android:layout_below="@+id/textPassword"
        android:hint="@string/ConfirmPassword"
        android:textSize="20dp"
        android:inputType="textPassword" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/done"
        android:onClick="Continue"
        app:layout_anchorGravity="bottom|right|end"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/editText"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/back_button"
        android:onClick="Back"
        app:layout_anchorGravity="bottom|right|end"
        android:id="@+id/editText"
        android:layout_marginLeft="66dp"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/rlEmail"
        android:layout_toEndOf="@+id/rlEmail" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mailConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textEmail"
        android:textSize="20dp"
        android:hint="@string/ConfirmEmail" />

</RelativeLayout>